# equilibrium-guard

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
dashboard/: __init__.py  bridge.py  requirements.txt  server.py
dashboard/templates/: dashboard.html
docs/: OPENCLAW_PR.md  plugin_findings_2025-02-01.md
examples/: usage_examples.py
openclaw-plugin/: README.md  index.ts  openclaw.plugin.json  package.json
skill/: SKILL.md  config.yaml  guard.py  install.sh  requirements.txt
src/: __init__.py  anchor.py  compliance_map.py  constraint.py  guard.py
tests/: test_anchor.py  test_constraint.py
